--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -4,11 +4,11 @@
   <meta charset="utf-8">
   <title>Frontend</title>
   <base href="/">
-
+  <link rel="stylesheet" type="text/css" href="assets/app.css" media="screen" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-  <app-root></app-root>
+<app-root></app-root>
 </body>
 </html>
