--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -33,9 +33,77 @@
   </div>
 </div>
 
-<!---->
+<!-- Main Part -->
 <app-top-navigation></app-top-navigation>
 <app-root></app-root>
+
+<footer>
+  <div class="inner">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-3 col-sm-6 widget">
+          <div class="about">
+            <a href="index.html"><img class="logo" src="./assets/images/logo_light1.svg" height="32" alt="Logo"></a>
+            <p>Explore Sydney, Explore New South Wale. We can beat Airbnb(maybe). Cocorico is the French word. In the Zelda game,
+            It is the name of a village in the southwest of Hyrule continent.</p>
+            <p>Build with heart by COMP3900 noMoreProjectPls group. Members are cawcaw, ~, Sherlock and Arno.O</p>
+          </div>
+        </div>
+        <div class="col-md-3 col-sm-6 widget">
+          <h5>Latest News</h5>
+          <ul class="blog_posts">
+            <li><a href="blog-post.html">Live your myth in Greece</a> <small>AUGUST 13, 2016</small></li>
+            <li><a href="blog-post.html">Zante Hotel in pictures</a> <small>AUGUST 16, 2016</small></li>
+            <li><a href="blog-post.html">Zante Hotel family party</a> <small>SEPTEMBER 15, 2016</small></li>
+          </ul>
+        </div>
+        <div class="col-md-3 col-sm-6 widget">
+          <h5>Useful Links</h5>
+          <ul class="useful_links">
+            <li><a href="#">About us</a></li>
+            <li><a href="#">Contact us</a></li>
+            <li><a href="#">History</a></li>
+            <li><a href="#">Gallery</a></li>
+            <li><a href="#">Location</a></li>
+          </ul>
+        </div>
+        <div class="col-md-3 widget">
+          <h5>Contact Us</h5>
+          <address>
+            <ul class="address_details">
+              <li><i class="glyphicon glyphicon-map-marker"></i> 25, Navagio Zakynthos, Greece</li>
+              <li><i class="glyphicon glyphicon-phone-alt"></i> Phone: 800 123 3456 </li>
+              <li><i class="fa fa-fax"></i> Fax: 800 123 3456</li>
+              <li><i class="fa fa-envelope"></i> Email: <a href="mailto:info@site.com">contact@site.com</a></li>
+            </ul>
+          </address>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="subfooter">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-6 col-sm-6">
+          <div class="copyrights">
+            Copyright 2019 <a href="index.html">Cocorico</a> All Rights Reserved.
+          </div>
+        </div>
+        <div class="col-md-6 col-sm-6">
+          <div class="social_media">
+            <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
+            <a class="facebook" data-original-title="Facebook" data-toggle="tooltip" href="#"><i class="fa fa-facebook"></i></a>
+            <a class="twitter" data-original-title="Twitter" data-toggle="tooltip" href="#"><i class="fa fa-twitter"></i></a>
+            <a class="pinterest" data-original-title="Pinterest" data-toggle="tooltip" href="#"><i class="fa fa-pinterest"></i></a>
+            <a class="linkedin" data-original-title="Linkedin" data-toggle="tooltip" href="#"><i class="fa fa-linkedin"></i></a>
+            <a class="instagram" data-original-title="Instagram" data-toggle="tooltip" href="#"><i class="fa fa-instagram"></i></a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</footer>
+
 <script type="text/javascript" src="assets/js/jquery.min.js"></script>
 <script type="text/javascript" src="assets/js/bootstrap.min.js"></script>
 <script type="text/javascript" src="assets/js/bootstrap-datepicker.min.js"></script>
