insert basic map in, but draw doesn't work because of webpack config

--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -20,6 +20,10 @@
   <link href="./assets/css/owl.carousel.min.css" rel="stylesheet" type="text/css">
   <link href="./assets/css/style.css" rel="stylesheet" type="text/css">
   <link href="./assets/css/responsive.css" rel="stylesheet" type="text/css">
+
+<!--  Mapbox style sheet-->
+  <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v0.44.2/mapbox-gl.css' rel='stylesheet' />
+  <link rel='stylesheet' href='https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-draw/v1.0.0/mapbox-gl-draw.css' type='text/css'/>
 </head>
 <body>
 <!-- ========== PRELOADER ========== -->
@@ -134,5 +138,7 @@
 <script type="text/javascript" src="./assets/revolution/js/extensions/revolution.extension.parallax.min.js"></script>
 <script type="text/javascript" src="./assets/revolution/js/extensions/revolution.extension.slideanims.min.js"></script>
 <script type="text/javascript" src="./assets/revolution/js/extensions/revolution.extension.video.min.js"></script>
+
+<!--Mapbox scripts-->
 </body>
 </html>
