basic map and drawing tool works

--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -21,9 +21,11 @@
   <link href="./assets/css/style.css" rel="stylesheet" type="text/css">
   <link href="./assets/css/responsive.css" rel="stylesheet" type="text/css">
 
-<!--  Mapbox style sheet-->
-  <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v0.44.2/mapbox-gl.css' rel='stylesheet' />
+<!--  Mapbox style sheet and javascript-->
+  <link rel='stylesheet' href='https://api.tiles.mapbox.com/mapbox-gl-js/v0.44.2/mapbox-gl.css' />
   <link rel='stylesheet' href='https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-draw/v1.0.0/mapbox-gl-draw.css' type='text/css'/>
+  <script src='https://api.tiles.mapbox.com/mapbox-gl-js/v1.4.1/mapbox-gl.js'></script>
+  <script src='https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-draw/v1.0.0/mapbox-gl-draw.js'></script>
 </head>
 <body>
 <!-- ========== PRELOADER ========== -->
