--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -113,6 +113,13 @@
   </div>
 </footer>
 
+<!-- For tables header -->
+<script type="text/html" id="hotelTools">
+  <div class="layui-btn-container">
+    <button class="layui-btn layui-btn-danger" lay-event="deleteData">Delete</button>
+  </div>
+</script>
+
 <script type="text/javascript" src="assets/js/jquery.min.js"></script>
 <script type="text/javascript" src="assets/js/bootstrap.min.js"></script>
 <script type="text/javascript" src="assets/js/bootstrap-datepicker.min.js"></script>
