--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -117,6 +117,7 @@
 <script type="text/html" id="hotelTools">
   <div class="layui-btn-container">
     <button class="layui-btn layui-btn-danger" lay-event="deleteData">Delete</button>
+    <button class="layui-btn layui-btn-normal" lay-event="addData">Add</button>
   </div>
 </script>
 
