finish hotel management functions

--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -118,6 +118,7 @@
   <div class="layui-btn-container">
     <button class="layui-btn layui-btn-danger" lay-event="deleteData">Delete</button>
     <button class="layui-btn layui-btn-normal" lay-event="addData">Add</button>
+    <button class="layui-btn layui-btn-normal" lay-event="updateData">Update</button>
   </div>
 </script>
 
