--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -61,9 +61,9 @@
         <div class="col-md-3 col-sm-6 widget">
           <h5>Latest News</h5>
           <ul class="blog_posts">
-            <li><a href="blog-post.html">Live your myth in Greece</a> <small>AUGUST 13, 2016</small></li>
-            <li><a href="blog-post.html">Zante Hotel in pictures</a> <small>AUGUST 16, 2016</small></li>
-            <li><a href="blog-post.html">Zante Hotel family party</a> <small>SEPTEMBER 15, 2016</small></li>
+            <li><a href="#">Live your myth in Greece</a> <small>AUGUST 13, 2019</small></li>
+            <li><a href="#">Zante Hotel in pictures</a> <small>AUGUST 16, 2019</small></li>
+            <li><a href="#">Zante Hotel family party</a> <small>SEPTEMBER 15, 2019</small></li>
           </ul>
         </div>
         <div class="col-md-3 col-sm-6 widget">
@@ -80,10 +80,10 @@
           <h5>Contact Us</h5>
           <address>
             <ul class="address_details">
-              <li><i class="glyphicon glyphicon-map-marker"></i> 25, Navagio Zakynthos, Greece</li>
-              <li><i class="glyphicon glyphicon-phone-alt"></i> Phone: 800 123 3456 </li>
-              <li><i class="fa fa-fax"></i> Fax: 800 123 3456</li>
-              <li><i class="fa fa-envelope"></i> Email: <a href="mailto:info@site.com">contact@site.com</a></li>
+              <li><i class="glyphicon glyphicon-map-marker"></i>UNSW Sydney, Kensington</li>
+              <li><i class="glyphicon glyphicon-phone-alt"></i> Phone: 876 543 210</li>
+              <li><i class="fa fa-fax"></i> Fax: 876 543 210</li>
+              <li><i class="fa fa-envelope"></i> Email: <a href="mailto:info@site.com">contact@cocorico.com</a></li>
             </ul>
           </address>
         </div>
