activation page done

--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -61,9 +61,9 @@
         <div class="col-md-3 col-sm-6 widget">
           <h5>Latest News</h5>
           <ul class="blog_posts">
-            <li><a href="#">Live your myth in Greece</a> <small>AUGUST 13, 2019</small></li>
-            <li><a href="#">Zante Hotel in pictures</a> <small>AUGUST 16, 2019</small></li>
-            <li><a href="#">Zante Hotel family party</a> <small>SEPTEMBER 15, 2019</small></li>
+            <li><a href="#">Live your myth in Sydney</a> <small>August 13, 2019</small></li>
+            <li><a href="#">Sydney in pictures</a> <small>August 16, 2019</small></li>
+            <li><a href="#">Sydney family party</a> <small>September 15, 2019</small></li>
           </ul>
         </div>
         <div class="col-md-3 col-sm-6 widget">
